--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<img src="./srv/lib/captcha.php" alt="ss" />
+		<form action="./srv/api/upload" method="post" enctype="multipart/form-data">
+			Select image to upload:
+			<input type="file" name="fileToUpload" id="fileToUpload" />
+			<input type="submit" value="Upload Image" name="submit" />
+		</form>
 	</body>
 </html>
