--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+
+		<script src="./srv/js/jquery.min.js"></script>
+		<script src="./srv/js/md5.js"></script>
+
+		<script src="./js/app.js"></script>
 	</head>
 	<body>
-		<form action="./srv/api/upload" method="post" enctype="multipart/form-data">
-			Select image to upload:
-			<input type="file" name="fileToUpload" id="fileToUpload" />
-			<input type="submit" value="Upload Image" name="submit" />
-		</form>
+		<h2>
+			sign up
+		</h2>
+		<input type="text" id="txt_user_name_sign_up" placeholder="USER NAME ?" />
+		<br />
+		<input type="password" id="txt_user_pass_sign_up" placeholder="PASSWORD ?" />
+		<br />
+		<button onclick="signUp();">SIGN UP</button>
+		<hr />
+
+		<h2>
+			change password
+		</h2>
+		<input type="password" id="txt_user_pass_change" placeholder="PASSWORD ?" />
+		<br />
+		<button onclick="changePassword();">Change Password</button>
+		<hr />
+
+		<h2>
+			sign in
+		</h2>
+		<input type="text" id="txt_user_name_sign_in" placeholder="USER NAME ?" />
+		<br />
+		<input type="password" id="txt_user_pass_sign_in" placeholder="PASSWORD ?" />
+		<br />
+		<button onclick="signIn();">SIGN IN</button>
+		<hr />
+
+		<a target="_blank" href="./srv/api/sign-out">SIGN OUT</a>
 	</body>
 </html>
