--- a/index.html
+++ b/index.html
@@ -7,38 +7,48 @@
 
 		<script src="./srv/js/jquery.min.js"></script>
 		<script src="./srv/js/md5.js"></script>
+		<script src="./srv/js/app.js"></script>
 
-		<script src="./js/app.js"></script>
+		<link rel="stylesheet" href="./srv/bootstrap/css/bootstrap.min.css" />
+		<script src="./srv/bootstrap/js/bootstrap.min.js"></script>
+
+		<link rel="stylesheet" href="./srv/css/main.css" />
 	</head>
-	<body>
-		<h2>
-			sign up
-		</h2>
-		<input type="text" id="txt_user_name_sign_up" placeholder="USER NAME ?" />
-		<br />
-		<input type="password" id="txt_user_pass_sign_up" placeholder="PASSWORD ?" />
-		<br />
-		<button onclick="signUp();">SIGN UP</button>
-		<hr />
+	<body style="padding: 5px 10px;" onload="init();">
+		<button id="btn_sign_out" class="btn btn-link hide" onclick="signOut();">SIGN OUT</button>
 
-		<h2>
-			change password
-		</h2>
-		<input type="password" id="txt_user_pass_change" placeholder="PASSWORD ?" />
-		<br />
-		<button onclick="changePassword();">Change Password</button>
-		<hr />
+		<div id="div_sign_in" class="hide">
+			<h2 class="alert alert-success">
+				sign in
+			</h2>
+			<input type="text" id="txt_user_name_sign_in" placeholder="USER NAME ?" />
+			<br />
+			<input type="password" id="txt_user_pass_sign_in" placeholder="PASSWORD ?" />
+			<br />
+			<button class="btn btn-primary" onclick="signIn();">SIGN IN</button>
+			<hr />
+		</div>
 
-		<h2>
-			sign in
-		</h2>
-		<input type="text" id="txt_user_name_sign_in" placeholder="USER NAME ?" />
-		<br />
-		<input type="password" id="txt_user_pass_sign_in" placeholder="PASSWORD ?" />
-		<br />
-		<button onclick="signIn();">SIGN IN</button>
-		<hr />
+		<div id="div_sign_up" class="hide">
+			<h2 class="alert alert-info">
+				Sign up
+			</h2>
+			<input type="text" id="txt_user_name_sign_up" placeholder="USER NAME ?" />
+			<br />
+			<input type="password" id="txt_user_pass_sign_up" placeholder="PASSWORD ?" />
+			<br />
+			<button class="btn btn-primary" onclick="signUp();">SIGN UP</button>
+			<hr />
+		</div>
 
-		<a target="_blank" href="./srv/api/sign-out">SIGN OUT</a>
+		<div id="div_change_password" class="hide">
+			<h2 class="alert alert-warning">
+				change password
+			</h2>
+			<input type="password" id="txt_user_pass_change" placeholder="PASSWORD ?" />
+			<br />
+			<button class="btn btn-primary" onclick="changePassword();">Change Password</button>
+			<hr />
+		</div>
 	</body>
 </html>
